[tool.poetry]
name = "sqlalchemy_get_or_create"
version = "0.1.1"
description = ""
authors = ["Enrico Barzetti <enricobarzetti@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sqlalchemy = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
