[tool.poetry]
name = "sqlalchemy_get_or_create"
version = "0.1.4"
description = "SQLAlchemy versions of Django's get_or_create() and update_or_create()"
authors = ["Enrico Barzetti <enricobarzetti@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.4.2"
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
